fix(sponsors): main sponsor page alignment to be centered

--- a/src/components/Splash/splash.scss
+++ b/src/components/Splash/splash.scss
@@ -2,11 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-
-    width: 80%;
-    height: 60%;
-    max-width: 1000px;
-    margin-top: 2%;
+    margin: 2% 0;
 
     @media only screen and (max-width: 900px),
     only screen and (max-height: 640px) {
